[package]
name = "udp-mcb-bridge"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
mcb-rs = { git = "https://github.com/javifercep/mcb-rs.git", branch = "main" }
serde = {version = "1.0.204", features =["derive"] }
serde-xml-rs = "0.6.0"
